# git-loc-history

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dev/: notes.txt
pkg/arch/: PKGBUILD
pkg/debian/: control
pkg/fedora/: pwrstat-gui.spec
src/: create-loc-history.cpp  create-loc-history.hpp  git-loc-history-cli.cpp  git-loc-history.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp
